--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,10 +40,13 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-9">
-          <%= bootstrap_flash %>
-          <%= yield %>
+          <div id="flash">
+            <%= bootstrap_flash %>
+          </div>
         </div>
-      </div><!--/row-->
+      </div>
+      <%= yield %>
+      <!--/row-->
 
       <footer>
         <p>&copy; Company 2019</p>
