--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,9 +3,20 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= bootstrap_devise_error_messages! %>
 
+  <div class="form-group row">
+    <div class="col-md-5">
+      <%= f.label :first_name %>
+      <%= f.email_field :first_name, autofocus: true, autocomplete: 'First name', class: 'form-control' %>
+    </div>
+    <div class="col-md-5 offset-md-2">
+      <%= f.label :last_name %>
+      <%= f.email_field :last_name, autocomplete: 'Last name', class: 'form-control' %>
+    </div>
+  </div>
+
   <div class="form-group">
     <%= f.label :email %>
-    <%= f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control' %>
+    <%= f.email_field :email, autocomplete: 'email', class: 'form-control' %>
   </div>
 
   <div class="form-group">
