--- a/app/views/stocks/_list.html.erb
+++ b/app/views/stocks/_list.html.erb
@@ -1,5 +1,5 @@
 <h3>Your Stocks Listing</h3>
-<div class="container" style="background-color: #ededed">
+<div class="card" style="background-color: #ededed">
 	<div class="row listing-row">
 	  <div class="col-sm-3"><b>Company name</b></div>
 	  <div class="col-sm-3"><b>Ticker symbol</b></div>
