--- a/app/views/users/my_portfolio.html.erb
+++ b/app/views/users/my_portfolio.html.erb
@@ -4,11 +4,11 @@
 <div id="stock-lookup">
 	<%= form_tag search_stocks_path, remote: true, method: :get, id: "stock-lookup-form" do %>
 		<div class="form-group row no-padding text-center col-md-12">
-			<div class= "col-md-10">
+			<div class= "col-md-9">
 				<%= text_field_tag :stock, params[:stock], placeholder: "Stock ticker symbol", autofocus: true, class: "form-control search-box input-lg" %>
 			</div>
-			<div class="col-md-2">
-				<%= button_tag(type: :submit, class: "btn btn-lg btn-success") do %>
+			<div class="col-md-3">
+				<%= button_tag(type: :submit, class: "btn btn-block btn-success") do %>
 					<i class="fa fa-search"></i> Look up a stock
 				<% end%>
 			</div>
