--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,21 @@
-Welcome
-<%= link_to "Log Out", destroy_user_session_path, method: :delete %>
+<% if current_user %>
+	<h3>Welcome <%= current_user.full_name %>!</h3>
+<% else %>
+	<h3>Welcome to Stock tracker!</h3>
+	<div class="row">
+	  <div class="col-md-6">
+	  	<div class="card text-center">
+	  		<div class="card-body">
+					<%= link_to "LOG IN", new_user_session_path, class: "btn btn-lg btn-primary", style: "align-center" %>
+				</div>
+			</div>
+	  </div>
+	  <div class="col-md-6">
+	  	<div class="card text-center">
+	  		<div class="card-body">
+	  			<%= link_to "SIGN UP", new_user_registration_path, class: "btn btn-lg btn-success", style: "align-center" %>
+	  		</div>
+	  	</div>
+	  </div>
+	</div>
+<% end %>
