--- a/app/views/stocks/_list.html.erb
+++ b/app/views/stocks/_list.html.erb
@@ -1,4 +1,4 @@
-<h3>Your Stocks Listing</h3>
+<h3>Stocks Listing</h3>
 <div class="card" style="background-color: #ededed">
 	<div class="row listing-row">
 	  <div class="col-sm-3"><b>Company name</b></div>
