--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,11 +6,11 @@
   <div class="form-group row">
     <div class="col-md-5">
       <%= f.label :first_name %>
-      <%= f.email_field :first_name, autofocus: true, autocomplete: 'First name', class: 'form-control' %>
+      <%= f.text_field :first_name, autofocus: true, autocomplete: 'First name', class: 'form-control' %>
     </div>
     <div class="col-md-5 offset-md-2">
       <%= f.label :last_name %>
-      <%= f.email_field :last_name, autocomplete: 'Last name', class: 'form-control' %>
+      <%= f.text_field :last_name, autocomplete: 'Last name', class: 'form-control' %>
     </div>
   </div>
 
