--- a/app/views/users/_result.html.erb
+++ b/app/views/users/_result.html.erb
@@ -1,8 +1,14 @@
-<% if @stock %>
-	<div class="well results-block">
-		<strong>Symbol: </strong><%= @stock.ticker %>
-		<strong>Name: </strong><%= @stock.name %>
-		<strong>Price: </strong><%= @stock.last_price %>
-		<%= link_to "Add to my stocks", user_stocks_path(user: current_user, stock_ticker: @stock.ticker), class: "btn btn-xs, btn-success", method: :post %>
+<% unless @users.blank? %>
+	<div class="card card-body results-block col-lg-6">
+		<% @users.each do |user| %>
+			<div class="row">
+				<div class="col-lg-9">
+					<strong><%= link_to user.full_name, user_path(user) %></strong>
+				</div>
+				<div class="col-lg-3 no-padding">
+					<%= link_to "Follow user", subscriptions_path, class: "btn btn-xs btn-success", method: :post %>
+				</div>
+			</div>
+		<% end %>
 	</div>
 <% end %>
