--- a/app/views/users/my_portfolio.html.erb
+++ b/app/views/users/my_portfolio.html.erb
@@ -3,21 +3,14 @@
 <h3>Search for Stocks</h3>
 <div id="stock-lookup">
 	<%= form_tag search_stocks_path, remote: true, method: :get, id: "stock-lookup-form" do %>
-		<div class="form-group row no-padding text-center col-md-12">
-			<div class= "col-md-9">
-				<%= text_field_tag :stock, params[:stock], placeholder: "Stock ticker symbol", autofocus: true, class: "form-control search-box input-lg" %>
-			</div>
-			<div class="col-md-3">
-				<%= button_tag(type: :submit, class: "btn btn-block btn-success") do %>
-					<i class="fa fa-search"></i> Look up a stock
-				<% end%>
-			</div>
+		<div id="stock-lookup">
+			<%= render partial: "users/lookup" %>
 		</div>
 	<% end %>
 </div>
 
 <div id="results">
-	<%= render partial: "users/result" %>
+	<%= render partial: "stocks/result" %>
 </div>
 
 <div id="stock-list">
